Not reviewed. Revert of r55593 which caused a regression of worker-cloneports.html.

REGRESSION(55593?): fast/workers/worker-cloneport.html is timing out on Leopard
https://bugs.webkit.org/show_bug.cgi?id=35819

WebCore:

* Android.jscbindings.mk:
* Android.v8bindings.mk:
* GNUmakefile.am:
* WebCore.gypi:
* WebCore.pro:
* WebCore.vcproj/WebCore.vcproj:
* WebCore.xcodeproj/project.pbxproj:
* bindings/js/JSDOMWindowCustom.cpp:
* bindings/js/JSDatabaseCallback.cpp: Removed.
* bindings/js/JSDatabaseCallback.h: Removed.
* bindings/v8/custom/V8DOMWindowCustom.cpp:
* bindings/v8/custom/V8DatabaseCallback.cpp: Removed.
* bindings/v8/custom/V8DatabaseCallback.h: Removed.
* dom/Document.cpp:
(WebCore::Document::postTask):
* page/DOMWindow.cpp:
(WebCore::DOMWindow::openDatabase):
* page/DOMWindow.h:
* page/DOMWindow.idl:
* storage/Database.cpp:
(WebCore::Database::openDatabase):
(WebCore::Database::Database):
(WebCore::Database::performOpenAndVerify):
* storage/Database.h:
* storage/DatabaseCallback.h: Removed.
* workers/WorkerContext.cpp:
(WebCore::WorkerContext::openDatabase):
* workers/WorkerContext.h:

LayoutTests:

* fast/frames/resources/sandboxed-iframe-storage-allowed.html:
* fast/frames/resources/sandboxed-iframe-storage-disallowed.html:
* fast/frames/sandboxed-iframe-storage-expected.txt:
* storage/open-database-creation-callback-expected.txt: Removed.
* storage/open-database-creation-callback-isolated-world-expected.txt: Removed.
* storage/open-database-creation-callback-isolated-world.html: Removed.
* storage/open-database-creation-callback.html: Removed.
* platform/qt/Skipped:
* platform/mac-leopard/Skipped: Enable the temporarily disabled test back.

Canonical link: https://commits.webkit.org/46932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55635 268f45cc-cd09-0410-ab3c-d52691b4dbfc