WebCore/bindings/js/JSDOMWindowCustom.cpp
@@ -22,7 +22,6 @@
 
 #include "AtomicString.h"
 #include "Chrome.h"
-#include "Database.h"
 #include "DOMWindow.h"
 #include "Document.h"
 #include "ExceptionCode.h"
@@ -36,8 +35,6 @@
 #include "HTMLDocument.h"
 #include "History.h"
 #include "JSAudioConstructor.h"
-#include "JSDatabase.h"
-#include "JSDatabaseCallback.h"
 #include "JSDOMWindowShell.h"
 #include "JSEvent.h"
 #include "JSEventListener.h"
@@ -995,26 +992,6 @@ JSValue JSDOMWindow::removeEventListener(ExecState* exec, const ArgList& args)
     impl()->removeEventListener(args.at(0).toString(exec), JSEventListener::create(asObject(listener), this, false, currentWorld(exec)).get(), args.at(2).toBoolean(exec));
     return jsUndefined();
 }
-
-#if ENABLE(DATABASE)
-JSValue JSDOMWindow::openDatabase(ExecState* exec, const ArgList& args)
-{
-    if (!allowsAccessFrom(exec) || (args.size() < 4))
-        return jsUndefined();
-    ExceptionCode ec = 0;
-    const UString& name = args.at(0).toString(exec);
-    const UString& version = args.at(1).toString(exec);
-    const UString& displayName = args.at(2).toString(exec);
-    unsigned long estimatedSize = args.at(3).toInt32(exec);
-    RefPtr<DatabaseCallback> creationCallback;
-    if ((args.size() >= 5) && args.at(4).isObject())
-        creationCallback = JSDatabaseCallback::create(asObject(args.at(4)), globalObject());
-
-    JSValue result = toJS(exec, globalObject(), WTF::getPtr(impl()->openDatabase(name, version, displayName, estimatedSize, creationCallback.release(), ec)));
-    setDOMException(exec, ec);
-    return result;
-}
-#endif
 
 DOMWindow* toDOMWindow(JSValue value)
 {
